--- a/config/settings.yml
+++ b/config/settings.yml
@@ -11,7 +11,7 @@ admin:
   words:
     default_size_word_answers: 4
     max_size_word_answers: 7
-
 lesson:
   number_words: 10
   per_page: 10
+size_icon_true_false: 30
